# evo_extend

./: .gitignore  README.md  myslam.py  myslam_config.json  myslam_debug_config.json  pyproject.toml  test_myslam.py
cpp/: CMakeLists.txt
cpp/include/: dataset_reader.hpp
cpp/src/: dataset_reader.cpp
cpp/test/: test_all_datasets.cpp
evo/core/: eval.py  slam_interface.py
evo/tools/: dataset_config.py  dataset_read.py  file_interface.py  log.py  settings.py  tf_id.py
test/: test_dataset_reader.py  test_euroc.py  test_tum.py
